--- a/Views/Admin/AdministrarEmpleados.cshtml
+++ b/Views/Admin/AdministrarEmpleados.cshtml
@@ -1,6 +1,6 @@
 ﻿<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="~/css/Estilos.css" />
-
+@model List<JarredsOrderHub.Models.Empleado>
 <h1>Empleados</h1>
 
 <!-- Tabla de Empleados -->
