--- a/Views/Catalogo/Menu.cshtml
+++ b/Views/Catalogo/Menu.cshtml
@@ -1,36 +1,27 @@
 ﻿<link rel="stylesheet" href="~/css/Estilos.css" />
+@model List<JarredsOrderHub.Models.Platillo>
+
+
 <h1>Menú de Platos</h1>
-
+<tbody>
 <div class="menu-container">
-    <!-- Card de Plato 1 -->
-    <div class="menu-card">
-        <img src="https://imag.bonviveur.com/pizza-margarita.jpg" alt="Pizza Margarita" class="menu-image">
-        <div class="menu-info">
-            <h3>Pizza Margarita</h3>
-            <p><strong>Descripción:</strong> Pizza con tomate, queso y albahaca</p>
-            <p><strong>Precio:</strong> $12.99</p>
-            <p><strong>Ingredientes:</strong> Tomate, Queso, Albahaca</p>
-            <p><strong>Categoría:</strong> Principal</p>
-            <p><strong>Disponible:</strong> Sí</p>
-        </div>
-        <button class="add-to-cart-btn">
-            <i class="fas fa-cart-plus"></i> Añadir al Carrito
-        </button>
-    </div>
+ 
 
-    <!-- Card de Plato 2 -->
-    <div class="menu-card">
-        <img src="https://www.recetascostarica.com/base/stock/Recipe/rice-and-beans/rice-and-beans_web.jpg" alt="Ensalada César" class="menu-image">
-        <div class="menu-info">
-            <h3>Rice and Beans</h3>
-            <p><strong>Descripción:</strong> Delicioso Rice and Beans con gran cantidad</p>
-            <p><strong>Precio:</strong> $8.50</p>
-            <p><strong>Ingredientes:</strong> Pechuga de pollo, Lechuga, Arroz</p>
-            <p><strong>Categoría:</strong> Principal</p>
-            <p><strong>Disponible:</strong> Sí</p>
-        </div>
-        <button class="add-to-cart-btn">
-            <i class="fas fa-cart-plus"></i> Añadir al Carrito
-        </button>
+     @foreach (var platillo in Model)
+        {
+            <div class="menu-card">
+                <img src="@platillo.Imagen" alt="@platillo.Nombre" class="menu-image">
+                <div class="menu-info">
+                    <h3>@platillo.Nombre</h3>
+                    <p><strong>Descripción:</strong> @platillo.Descripcion</p>
+                    <p><strong>Precio:</strong>@platillo.Precio.ToString("C")</p>
+                    <p><strong>Categoría:</strong>@platillo.IdCategoria</p>
+                    <p><strong>Disponible:</strong>@(platillo.Activo ? "Si" : "No Disponible")</p>
+                </div>
+                <button class="add-to-cart-btn">
+                    <i class="fas fa-cart-plus"></i> Añadir al Carrito
+                </button>
+            </div>
+    }
     </div>
-</div>
+    </tbody>
